Fixed alignment with cancel button
Fixed alignment issue with cancel button

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,6 +16,10 @@ h3 {
   border: 1px solid $black;
 }
 
+.modal-footer {
+  text-align: left;
+}
+
 // .rating {
 //   border: 1px solid $black;
 //   float: right;
